# ducking-octo-hipster

./: README.md
bashes/: .bashrc  .vimrc  random_word.sh
bignum/: README  configure.ac
bignum/src/: Makefile.am  bignum.c  bignum.h
bignum/tests/: Makefile.am  tests_bignum.c  tests_main.c
ttt/: README  ttt.css  ttt.html  ttt.js
